{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 380,
  "lineage": "92a7bd93-9e61-db27-a687-dac41008c043",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "oneedge-route-table-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-098fef8b3853f5c49",
            "id": "rtb-098fef8b3853f5c49",
            "owner_id": "105019345634",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0301eacfea5089da4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "oneedge-route-table-01"
            },
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.oneedge-ig",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "oneedge-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:internet-gateway/igw-0301eacfea5089da4",
            "id": "igw-0301eacfea5089da4",
            "owner_id": "105019345634",
            "tags": {
              "Name": "oneedge-ig"
            },
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "one-edge-ecs-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:loadbalancer/app/one-edge-ecs-elb/dd350cf9f0b0e175",
            "arn_suffix": "app/one-edge-ecs-elb/dd350cf9f0b0e175",
            "dns_name": "one-edge-ecs-elb-312119099.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:loadbalancer/app/one-edge-ecs-elb/dd350cf9f0b0e175",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "one-edge-ecs-elb",
            "security_groups": [
              "sg-0719f086360e41c34"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3df3745ac54fa22"
              },
              {
                "subnet_id": "subnet-0eeaaf993e7c94939"
              }
            ],
            "subnets": [
              "subnet-0b3df3745ac54fa22",
              "subnet-0eeaaf993e7c94939"
            ],
            "tags": {
              "Name": "one-edge-ecs-elb"
            },
            "vpc_id": "vpc-00e49444ffbc07e8e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_subnet.oneedge-subnet-01",
            "aws_subnet.oneedge-subnet-02",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "one-edge-ecs-elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ELB default response action",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:loadbalancer/app/one-edge-ecs-elb/dd350cf9f0b0e175",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.one-edge-ecs-elb",
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_subnet.oneedge-subnet-01",
            "aws_subnet.oneedge-subnet-02",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "oe-ecs-elb-lr-auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-auth/9b6382b335e1b954",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/129985d20437d27d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/v1/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/129985d20437d27d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4",
            "priority": 1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.one-edge-ecs-elb",
            "aws_lb_listener.one-edge-ecs-elb-listener",
            "aws_lb_target_group.one-edge-ecs-elb-tg-auth",
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_subnet.oneedge-subnet-01",
            "aws_subnet.oneedge-subnet-02",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "oe-ecs-elb-lr-billing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-billing/37c46f334e376357",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/8ca0f2cb5fe3c4a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/v1/billing/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/8ca0f2cb5fe3c4a6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4",
            "priority": 2
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.one-edge-ecs-elb",
            "aws_lb_listener.one-edge-ecs-elb-listener",
            "aws_lb_target_group.one-edge-ecs-elb-tg-billing",
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_subnet.oneedge-subnet-01",
            "aws_subnet.oneedge-subnet-02",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "oe-ecs-elb-lr-tenants",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-tenants/fe50535e43805d1c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/c96fbb6fcb372819",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/v1/tenants/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener-rule/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4/c96fbb6fcb372819",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:listener/app/one-edge-ecs-elb/dd350cf9f0b0e175/dc632f2156957cb4",
            "priority": 3
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.one-edge-ecs-elb",
            "aws_lb_listener.one-edge-ecs-elb-listener",
            "aws_lb_target_group.one-edge-ecs-elb-tg-tenants",
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_subnet.oneedge-subnet-01",
            "aws_subnet.oneedge-subnet-02",
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "one-edge-ecs-elb-tg-auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-auth/9b6382b335e1b954",
            "arn_suffix": "targetgroup/one-edge-ecs-elb-tg-auth/9b6382b335e1b954",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/auth/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-auth/9b6382b335e1b954",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "one-edge-ecs-elb-tg-auth",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "one-edge-ecs-elb-tg-billing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-billing/37c46f334e376357",
            "arn_suffix": "targetgroup/one-edge-ecs-elb-tg-billing/37c46f334e376357",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/billing/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-billing/37c46f334e376357",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "one-edge-ecs-elb-tg-billing",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "one-edge-ecs-elb-tg-tenants",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-tenants/fe50535e43805d1c",
            "arn_suffix": "targetgroup/one-edge-ecs-elb-tg-tenants/fe50535e43805d1c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/tenants/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:105019345634:targetgroup/one-edge-ecs-elb-tg-tenants/fe50535e43805d1c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "one-edge-ecs-elb-tg-tenants",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "one-edge-ecs-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:security-group/sg-017cdc65941e93fcd",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017cdc65941e93fcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for testing",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Http from ELB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0719f086360e41c34"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "one-edge-ecs-cluster-sg",
            "name_prefix": "",
            "owner_id": "105019345634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "one-edge-ecs-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.one-edge-ecs-elb-sg",
            "aws_vpc.oneedge-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "one-edge-ecs-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:security-group/sg-0719f086360e41c34",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0719f086360e41c34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "one-edge-ecs-elb-sg",
            "name_prefix": "",
            "owner_id": "105019345634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "one-edge-ecs-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oneedge-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:subnet/subnet-0b3df3745ac54fa22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "168.31.0.0/20",
            "id": "subnet-0b3df3745ac54fa22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105019345634",
            "tags": {
              "Name": "oneedge-subnet-01"
            },
            "tags_all": {
              "Name": "oneedge-subnet-01"
            },
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oneedge-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:subnet/subnet-0eeaaf993e7c94939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "168.31.16.0/20",
            "id": "subnet-0eeaaf993e7c94939",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105019345634",
            "tags": {
              "Name": "oneedge-subnet-02"
            },
            "tags_all": {
              "Name": "oneedge-subnet-02"
            },
            "vpc_id": "vpc-00e49444ffbc07e8e"
          },
          "dependencies": [
            "aws_vpc.oneedge-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "oneedge-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105019345634:vpc/vpc-00e49444ffbc07e8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "168.31.0.0/16",
            "default_network_acl_id": "acl-05dd6887d9ab30b9b",
            "default_route_table_id": "rtb-098fef8b3853f5c49",
            "default_security_group_id": "sg-09eee3af8d6ece457",
            "dhcp_options_id": "dopt-04ea6745a443dfe29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e49444ffbc07e8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098fef8b3853f5c49",
            "owner_id": "105019345634",
            "tags": {
              "Name": "oneedge-vpc"
            },
            "tags_all": {
              "Name": "oneedge-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}